--- a/style.css
+++ b/style.css
@@ -47,19 +47,6 @@ body{
     background: purple;
 }
 
-.circle{
-    background:orange;
-    display: flex;
-    border-radius: 50%;
-    width: 10vh;
-}
-
-.circle::before{
-    content:"";
-    padding-top: 100%;
-    display: block;
-}
-
 #colour-picker{
     border:none;
     width:100px;
@@ -74,4 +61,24 @@ body{
 #colour-picker::-moz-color-swatch{
     border-radius: 50%;
     border:none;
+}
+
+input[type='range'] {
+    -webkit-appearance: none;
+}
+  
+input[type='range']::-webkit-slider-runnable-track {
+    height: 10px;
+    border: 1px solid black;
+    border-radius: 25px;
+    background: white;
+}
+  
+input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 24px;
+    height: 24px;
+    border-radius: 25px;
+    margin-top: -8px;
+    background: grey;
 }
